# search_engine

./: CMakeLists.txt  config.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  SearchServerOld.cpp  main.cpp
test/: CMakeLists.txt  TestBasic.cpp
tests/: CMakeLists.txt  TestBasic.cpp
